--- a/best_flutter_ui_templates/pubspec.yaml
+++ b/best_flutter_ui_templates/pubspec.yaml
@@ -19,7 +19,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  http: 
+  moor_flutter: ^2.0.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -31,6 +31,8 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  moor_generator: ^2.1.1
+  build_runner:
 
 
 # For information on the generic Dart part of this file, see the
